2004-04-12  Mike Kestner  <mkestner@ximian.com>

	* en/GLib/Object.xml : some more docs for the Raw property.

2004-03-17  Alex Combas  <yummyfiddlehead@yahoo.com>
	* en/Gtk/Accel.xml: Full doc.

2004-03-08  Hector E. Gomez Morales  <hectorgm@ciencias.unam.mx>
	* en/Art/Global.xml
	* en/Art/Render.xml
	* en/Art/Rgb.xml
	* en/Art/Rgba.xml
	* en/Art/Uta.xml
	* en/Gda/Command.xml
	* en/Gda/Field.xml
	* en/Gda/FieldAtributes,xml
	* en/Gda/Parameter.xml
	* en/Gdk/*.xml
	* en/Glade/XML.xml
	* en/Pango/Analysis.xml
	* en/Pango/AttrIterator.xml
	* en/Pango/Context.xml
	* en/Pango/EngineLang.xml
	* en/Pango/EngineShape.xml
	* en/Pango/FontFamily.xml
	* en/Pango/FontMap.xml
	* en/Pango/FontMetrics.xml
	* en/Pango/Global.xml
	* en/Pango/GlyphItem.xml
	* en/Pango/GlyphString.xml
	* en/Pango/Layout.xml
	* en/Pango/LayoutLine.xml: Updated and/or removed various nodes.
	
2004-03-05  Hector E. Gomez Morales  <hectorgm@ciencias.unam.mx>
	* en/* : Created TODO files for every namespace (except *Sharp namespaces).
	
2004-02-29  Hector E. Gomez Morales  <hectorgm@ciencias.unam.mx>
	* Changelog: Corrected bogus year dates.
	* en/Gtk/TODO: updated TODO list.
	* en/Atk/EditableText.xml
	* en/Atk/Free.xml
	* en/Atk/NoOpObject.xml
	* en/Atk/Object.xml
	* en/Atk/StateSet.xml
	* en/Gnome/CanvasProxy.xml
	* en/Gnome/CanvasRichText.xml
	* en/Gnome/Config.xml
	* en/Gnome/DateEdit.xml
	* en/Gnome/Entry.xml
	* en/Gnome/FileEntry.xml
	* en/Gnome/Font.xml
	* en/Gnome/FontFamily.xml
	* en/Gnome/GlyphList.xml
	* en/Gnome/IconList.xml
	* en/Gnome/IconTheme.xml
	* en/Gnome/Pgl.xml
	* en/Gtk/Combo.xml
	* en/Gtk/ListStore.xml
	* en/Gtk/RadioMenuItem.xml
	* en/Gtk/StockItem.xml
	* en/Gtk/StockManager.xml
	* en/Gtk/TextBuffer.xml
	* en/Gtk/TextIter.xml
	* en/Gtk/TextView.xml
	* en/Gtk/TooltipsData.xml
	* en/Gtk/TreeModelSort.xml
	* en/Gtk/TreeStore.xml
	* en/Gtk/TreeView.xml
	* en/Gtk/Widget.xml 
	* en/Gtk/Window.xml: Restored and/or removed various nodes.